# lg-gram-settings

./: Cargo.toml  make-release.bash
data/: com.github.LG-GramSettings.desktop  com.github.LGGramSettings.desktop  com.lg.gram.writer.policy  lg-gram-battery-care-limit.service  lg-gram-fn-lock.service  lg-gram-reader-mode.service  lg-gram-usb-charge.service  lg.gram.writer.policy  lg_gram_fan_mode_1.service  lg_gram_fan_mode_2.service
lg-gram-settings/: Cargo.toml
lg-gram-settings/src/: app.rs  battery_limit_object.rs  gram_setting_widget.rs  gram_widget.rs  lg_gram.rs  main.rs  modules.rs  window.rs
lg-gram-settings/src/resources/: resources.gresource.xml  style.css
lg-gram-settings/src/resources/ui/: gram_setting_widget.ui  gram_widget.ui  window.ui
lg-gram-settings/src/resources/ui/battery_limit_combo/: list-item.ui
lg-gram-settings/src/resources/ui/builder/: info_dialog.ui
lg-gram-writer/: Cargo.toml
lg-gram-writer/src/: main.rs
release/: lg-gram-settings  lg-gram-writer
src/: app.rs  battery_limit_object.rs  kernel_features.rs  main.rs  modules.rs  window.rs
src/resources/: resources.gresource.xml
src/resources/ui/: window.ui
src/resources/ui/battery_limit_combo/: entry-item.ui
